Add final files

--- a/Unidade 1/filtro_naivebayes.ipynb
+++ b/Unidade 1/filtro_naivebayes.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 27,
       "metadata": {
         "id": "0l5C-Gmc16N6"
       },
@@ -24,12 +24,11 @@
       "source": [
         "import nltk #biblioteca de conversão textos para Python\n",
         "\n",
-        "from nltk.corpus import stopwords\n",
+        "from nltk.corpus import stopwords # palavras que podem ser filtradas do texto\n",
         "\n",
+        "# Demais bibliotecas que trabalham com operações em palavras\n",
         "import string\n",
-        "\n",
         "import pandas as pd\n",
-        "#SKLearn\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -41,7 +40,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "nltk.download('all')\n",
         "\n",
         "msg = pd.read_csv('spam.csv', encoding='latin-1')\n",
@@ -56,9 +54,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fNhr_eVo2BE5",
-        "outputId": "0c852182-25c8-4253-e5a4-ee4b9e16cb3b"
+        "outputId": "13383030-bfe4-49c4-fc28-88cabc2381f4"
       },
-      "execution_count": 12,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +379,7 @@
       "metadata": {
         "id": "-twIVPow2HIT"
       },
-      "execution_count": 13,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -390,16 +388,24 @@
         "msg['length'] = msg['mensagem'].apply(len)\n",
         "\n",
         "msg['mensagem'].apply(limpaTexto)\n",
+        "#Divisão entre conjutos de treino e teste: msg_train, msg_test\n",
+        "#class_train e class_test são os rótulos de treinamento e teste\n",
         "msg_train, msg_test, class_train, class_test = train_test_split(msg['mensagem'], msg['tipo'], test_size=0.1)\n",
+        "\n",
+        "#Pipeline de como será feita a transformação, é analisado o arquivo de texto, contando a ocorrência de cada palavra\n",
+        "# Em seguida vem a normalização da contagem e transforma os dados para que fiquem menores durante o treinamento\n",
+        "# O classificador em Naive Bayes é iniciado para treinar os vetores \n",
+        "\n",
         "pipeline = Pipeline([\n",
         "    ('bow', CountVectorizer(analyzer = limpaTexto)),\n",
         "    ('tfidf', TfidfTransformer()),\n",
         "    ('classifier', MultinomialNB())\n",
         "])\n",
         "\n",
-        "\n",
+        "#Treinamento do modelo\n",
         "pipeline.fit(msg_train, class_train)\n",
         "\n",
+        "#Teste do modelo\n",
         "predictions = pipeline.predict(msg_test)\n",
         "\n",
         "print(classification_report(class_test, predictions))\n"
@@ -409,9 +415,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nYusp--e2OMP",
-        "outputId": "c85f85e0-2217-4848-aaf0-018c5bd223b1"
+        "outputId": "b80612b6-015b-4810-8968-d588cc83680d"
       },
-      "execution_count": 16,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,11 +425,11 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "         ham       0.97      1.00      0.98       489\n",
-            "        spam       1.00      0.78      0.88        69\n",
+            "         ham       0.97      1.00      0.98       492\n",
+            "        spam       1.00      0.74      0.85        66\n",
             "\n",
             "    accuracy                           0.97       558\n",
-            "   macro avg       0.99      0.89      0.93       558\n",
+            "   macro avg       0.98      0.87      0.92       558\n",
             "weighted avg       0.97      0.97      0.97       558\n",
             "\n"
           ]
