--- a/Unidade 1/random-forest.ipynb
+++ b/Unidade 1/random-forest.ipynb
@@ -16,13 +16,12 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 40,
       "metadata": {
         "id": "SuFWCL-mpG8Q"
       },
       "outputs": [],
       "source": [
-        "#Import the needed libraries\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -42,7 +41,7 @@
       "metadata": {
         "id": "5kMI1MWMpL3X"
       },
-      "execution_count": 28,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -53,181 +52,33 @@
       "metadata": {
         "id": "KpV6IZtgpODK"
       },
-      "execution_count": 29,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "flower_data.data"
+        "print(flower_data.data[0:5])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZtdeEr8dpVxy",
-        "outputId": "c84ec0cf-7824-43fb-d1c9-d73df0680a7b"
+        "outputId": "40cbc7b7-5e2f-40bc-9dd1-e0082fd772b7"
       },
-      "execution_count": 30,
+      "execution_count": 43,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[5.1, 3.5, 1.4, 0.2],\n",
-              "       [4.9, 3. , 1.4, 0.2],\n",
-              "       [4.7, 3.2, 1.3, 0.2],\n",
-              "       [4.6, 3.1, 1.5, 0.2],\n",
-              "       [5. , 3.6, 1.4, 0.2],\n",
-              "       [5.4, 3.9, 1.7, 0.4],\n",
-              "       [4.6, 3.4, 1.4, 0.3],\n",
-              "       [5. , 3.4, 1.5, 0.2],\n",
-              "       [4.4, 2.9, 1.4, 0.2],\n",
-              "       [4.9, 3.1, 1.5, 0.1],\n",
-              "       [5.4, 3.7, 1.5, 0.2],\n",
-              "       [4.8, 3.4, 1.6, 0.2],\n",
-              "       [4.8, 3. , 1.4, 0.1],\n",
-              "       [4.3, 3. , 1.1, 0.1],\n",
-              "       [5.8, 4. , 1.2, 0.2],\n",
-              "       [5.7, 4.4, 1.5, 0.4],\n",
-              "       [5.4, 3.9, 1.3, 0.4],\n",
-              "       [5.1, 3.5, 1.4, 0.3],\n",
-              "       [5.7, 3.8, 1.7, 0.3],\n",
-              "       [5.1, 3.8, 1.5, 0.3],\n",
-              "       [5.4, 3.4, 1.7, 0.2],\n",
-              "       [5.1, 3.7, 1.5, 0.4],\n",
-              "       [4.6, 3.6, 1. , 0.2],\n",
-              "       [5.1, 3.3, 1.7, 0.5],\n",
-              "       [4.8, 3.4, 1.9, 0.2],\n",
-              "       [5. , 3. , 1.6, 0.2],\n",
-              "       [5. , 3.4, 1.6, 0.4],\n",
-              "       [5.2, 3.5, 1.5, 0.2],\n",
-              "       [5.2, 3.4, 1.4, 0.2],\n",
-              "       [4.7, 3.2, 1.6, 0.2],\n",
-              "       [4.8, 3.1, 1.6, 0.2],\n",
-              "       [5.4, 3.4, 1.5, 0.4],\n",
-              "       [5.2, 4.1, 1.5, 0.1],\n",
-              "       [5.5, 4.2, 1.4, 0.2],\n",
-              "       [4.9, 3.1, 1.5, 0.2],\n",
-              "       [5. , 3.2, 1.2, 0.2],\n",
-              "       [5.5, 3.5, 1.3, 0.2],\n",
-              "       [4.9, 3.6, 1.4, 0.1],\n",
-              "       [4.4, 3. , 1.3, 0.2],\n",
-              "       [5.1, 3.4, 1.5, 0.2],\n",
-              "       [5. , 3.5, 1.3, 0.3],\n",
-              "       [4.5, 2.3, 1.3, 0.3],\n",
-              "       [4.4, 3.2, 1.3, 0.2],\n",
-              "       [5. , 3.5, 1.6, 0.6],\n",
-              "       [5.1, 3.8, 1.9, 0.4],\n",
-              "       [4.8, 3. , 1.4, 0.3],\n",
-              "       [5.1, 3.8, 1.6, 0.2],\n",
-              "       [4.6, 3.2, 1.4, 0.2],\n",
-              "       [5.3, 3.7, 1.5, 0.2],\n",
-              "       [5. , 3.3, 1.4, 0.2],\n",
-              "       [7. , 3.2, 4.7, 1.4],\n",
-              "       [6.4, 3.2, 4.5, 1.5],\n",
-              "       [6.9, 3.1, 4.9, 1.5],\n",
-              "       [5.5, 2.3, 4. , 1.3],\n",
-              "       [6.5, 2.8, 4.6, 1.5],\n",
-              "       [5.7, 2.8, 4.5, 1.3],\n",
-              "       [6.3, 3.3, 4.7, 1.6],\n",
-              "       [4.9, 2.4, 3.3, 1. ],\n",
-              "       [6.6, 2.9, 4.6, 1.3],\n",
-              "       [5.2, 2.7, 3.9, 1.4],\n",
-              "       [5. , 2. , 3.5, 1. ],\n",
-              "       [5.9, 3. , 4.2, 1.5],\n",
-              "       [6. , 2.2, 4. , 1. ],\n",
-              "       [6.1, 2.9, 4.7, 1.4],\n",
-              "       [5.6, 2.9, 3.6, 1.3],\n",
-              "       [6.7, 3.1, 4.4, 1.4],\n",
-              "       [5.6, 3. , 4.5, 1.5],\n",
-              "       [5.8, 2.7, 4.1, 1. ],\n",
-              "       [6.2, 2.2, 4.5, 1.5],\n",
-              "       [5.6, 2.5, 3.9, 1.1],\n",
-              "       [5.9, 3.2, 4.8, 1.8],\n",
-              "       [6.1, 2.8, 4. , 1.3],\n",
-              "       [6.3, 2.5, 4.9, 1.5],\n",
-              "       [6.1, 2.8, 4.7, 1.2],\n",
-              "       [6.4, 2.9, 4.3, 1.3],\n",
-              "       [6.6, 3. , 4.4, 1.4],\n",
-              "       [6.8, 2.8, 4.8, 1.4],\n",
-              "       [6.7, 3. , 5. , 1.7],\n",
-              "       [6. , 2.9, 4.5, 1.5],\n",
-              "       [5.7, 2.6, 3.5, 1. ],\n",
-              "       [5.5, 2.4, 3.8, 1.1],\n",
-              "       [5.5, 2.4, 3.7, 1. ],\n",
-              "       [5.8, 2.7, 3.9, 1.2],\n",
-              "       [6. , 2.7, 5.1, 1.6],\n",
-              "       [5.4, 3. , 4.5, 1.5],\n",
-              "       [6. , 3.4, 4.5, 1.6],\n",
-              "       [6.7, 3.1, 4.7, 1.5],\n",
-              "       [6.3, 2.3, 4.4, 1.3],\n",
-              "       [5.6, 3. , 4.1, 1.3],\n",
-              "       [5.5, 2.5, 4. , 1.3],\n",
-              "       [5.5, 2.6, 4.4, 1.2],\n",
-              "       [6.1, 3. , 4.6, 1.4],\n",
-              "       [5.8, 2.6, 4. , 1.2],\n",
-              "       [5. , 2.3, 3.3, 1. ],\n",
-              "       [5.6, 2.7, 4.2, 1.3],\n",
-              "       [5.7, 3. , 4.2, 1.2],\n",
-              "       [5.7, 2.9, 4.2, 1.3],\n",
-              "       [6.2, 2.9, 4.3, 1.3],\n",
-              "       [5.1, 2.5, 3. , 1.1],\n",
-              "       [5.7, 2.8, 4.1, 1.3],\n",
-              "       [6.3, 3.3, 6. , 2.5],\n",
-              "       [5.8, 2.7, 5.1, 1.9],\n",
-              "       [7.1, 3. , 5.9, 2.1],\n",
-              "       [6.3, 2.9, 5.6, 1.8],\n",
-              "       [6.5, 3. , 5.8, 2.2],\n",
-              "       [7.6, 3. , 6.6, 2.1],\n",
-              "       [4.9, 2.5, 4.5, 1.7],\n",
-              "       [7.3, 2.9, 6.3, 1.8],\n",
-              "       [6.7, 2.5, 5.8, 1.8],\n",
-              "       [7.2, 3.6, 6.1, 2.5],\n",
-              "       [6.5, 3.2, 5.1, 2. ],\n",
-              "       [6.4, 2.7, 5.3, 1.9],\n",
-              "       [6.8, 3. , 5.5, 2.1],\n",
-              "       [5.7, 2.5, 5. , 2. ],\n",
-              "       [5.8, 2.8, 5.1, 2.4],\n",
-              "       [6.4, 3.2, 5.3, 2.3],\n",
-              "       [6.5, 3. , 5.5, 1.8],\n",
-              "       [7.7, 3.8, 6.7, 2.2],\n",
-              "       [7.7, 2.6, 6.9, 2.3],\n",
-              "       [6. , 2.2, 5. , 1.5],\n",
-              "       [6.9, 3.2, 5.7, 2.3],\n",
-              "       [5.6, 2.8, 4.9, 2. ],\n",
-              "       [7.7, 2.8, 6.7, 2. ],\n",
-              "       [6.3, 2.7, 4.9, 1.8],\n",
-              "       [6.7, 3.3, 5.7, 2.1],\n",
-              "       [7.2, 3.2, 6. , 1.8],\n",
-              "       [6.2, 2.8, 4.8, 1.8],\n",
-              "       [6.1, 3. , 4.9, 1.8],\n",
-              "       [6.4, 2.8, 5.6, 2.1],\n",
-              "       [7.2, 3. , 5.8, 1.6],\n",
-              "       [7.4, 2.8, 6.1, 1.9],\n",
-              "       [7.9, 3.8, 6.4, 2. ],\n",
-              "       [6.4, 2.8, 5.6, 2.2],\n",
-              "       [6.3, 2.8, 5.1, 1.5],\n",
-              "       [6.1, 2.6, 5.6, 1.4],\n",
-              "       [7.7, 3. , 6.1, 2.3],\n",
-              "       [6.3, 3.4, 5.6, 2.4],\n",
-              "       [6.4, 3.1, 5.5, 1.8],\n",
-              "       [6. , 3. , 4.8, 1.8],\n",
-              "       [6.9, 3.1, 5.4, 2.1],\n",
-              "       [6.7, 3.1, 5.6, 2.4],\n",
-              "       [6.9, 3.1, 5.1, 2.3],\n",
-              "       [5.8, 2.7, 5.1, 1.9],\n",
-              "       [6.8, 3.2, 5.9, 2.3],\n",
-              "       [6.7, 3.3, 5.7, 2.5],\n",
-              "       [6.7, 3. , 5.2, 2.3],\n",
-              "       [6.3, 2.5, 5. , 1.9],\n",
-              "       [6.5, 3. , 5.2, 2. ],\n",
-              "       [6.2, 3.4, 5.4, 2.3],\n",
-              "       [5.9, 3. , 5.1, 1.8]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5.1 3.5 1.4 0.2]\n",
+            " [4.9 3.  1.4 0.2]\n",
+            " [4.7 3.2 1.3 0.2]\n",
+            " [4.6 3.1 1.5 0.2]\n",
+            " [5.  3.6 1.4 0.2]]\n"
+          ]
         }
       ]
     },
@@ -241,9 +92,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4b4-vCD9pVYb",
-        "outputId": "39c5e26a-e006-4345-90e2-7bc09c4c8e85"
+        "outputId": "adc8b57b-fd1c-4a2e-91f7-72c16c209c24"
       },
-      "execution_count": 31,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +107,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 44
         }
       ]
     },
@@ -270,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zcfiBR6Bpf9j",
-        "outputId": "0bd3a7d8-c8fc-4af7-f2e5-f78cac88d3c6"
+        "outputId": "c8762138-3619-4391-98dd-f0c39d6c1cc7"
       },
-      "execution_count": 32,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +133,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 45
         }
       ]
     },
@@ -307,9 +158,9 @@
           "height": 206
         },
         "id": "-JakT-YDpmQo",
-        "outputId": "d4f2a08a-338b-4f34-f92b-c17e34e22875"
+        "outputId": "079f0949-7968-47fd-f4e6-004a4c73b9a4"
       },
-      "execution_count": 33,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,7 +182,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2b67022c-9e55-4f28-bb0c-83bb499087f5\">\n",
+              "  <div id=\"df-494ba030-8167-425c-bf9d-c0efe4c6c2d2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -402,7 +253,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b67022c-9e55-4f28-bb0c-83bb499087f5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-494ba030-8167-425c-bf9d-c0efe4c6c2d2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -453,12 +304,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2b67022c-9e55-4f28-bb0c-83bb499087f5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-494ba030-8167-425c-bf9d-c0efe4c6c2d2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2b67022c-9e55-4f28-bb0c-83bb499087f5');\n",
+              "          const element = document.querySelector('#df-494ba030-8167-425c-bf9d-c0efe4c6c2d2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -481,7 +332,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 46
         }
       ]
     },
@@ -495,9 +346,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7gmgHvz3pmtn",
-        "outputId": "62f25c5b-c620-478b-8da6-ff75ba89e9ac"
+        "outputId": "fd404c06-5d5d-4844-a2fe-6e74e093a955"
       },
-      "execution_count": 34,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +361,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 47
         }
       ]
     },
@@ -531,9 +382,9 @@
           "height": 513
         },
         "id": "Zn2LoAerptS3",
-        "outputId": "89ad8934-8769-4897-d277-c6860aec1181"
+        "outputId": "d4268863-93fc-4579-a67e-6b03e5a9f252"
       },
-      "execution_count": 35,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "display_data",
@@ -551,7 +402,6 @@
       "cell_type": "code",
       "source": [
         "#import the train_test_split\n",
-        "\n",
         "\n",
         "#split the data: 70% training and 30% test\n",
         "features_train, features_test, labels_train, labels_test = train_test_split(\n",
@@ -574,9 +424,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wyb_fWaUqEvW",
-        "outputId": "1fff62c4-3834-4768-8be0-0b8318643cda"
+        "outputId": "0f325a70-4e92-4108-fb96-7a09b116c2a6"
       },
-      "execution_count": 36,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,9 +456,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W3ykjkrtqGXv",
-        "outputId": "1952d44f-4380-4bcc-a95e-5996c45aeb1c"
+        "outputId": "6914abd7-7002-4ed6-c865-7cd5d4c83746"
       },
-      "execution_count": 37,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
