Solving conflicts in notebook.

--- a/Unidade 3/Trabalho_Final.ipynb
+++ b/Unidade 3/Trabalho_Final.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Definir as variáveis de entrada e saída\n",
+        "# São definidas as variáveis que serão utilizadas no sistema: UVI, Escala de sensibilidade e nível de sombreamento\n",
         "# UVI (Ultraviolet Index),\n",
         "# Escala de Sensibilidade à Luz proposta por D. W. MacLeod (escala que mede a sensibilidade à luz do olho humano)\n",
         "# e o nível de sombreamento do vidro (ação)\n",
@@ -59,7 +59,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Definir as funções de pertinência para as variáveis\n",
+        "# Definimos as funções para cada uma das variáveis\n",
+        "# fuzz.trampf = função de pertinência trapezoidal\n",
+        "# fuzz.trimf = função de pertinência triangular\n",
         "\n",
         "UVI['Baixo'] = fuzz.trapmf(UVI.universe, [0, 0, 2, 3])\n",
         "UVI['Moderado'] = fuzz.trapmf(UVI.universe, [2, 3, 5, 6])\n",
@@ -129,7 +131,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Definir as regras fuzzy\n",
+        "# Definimos as regras fuzzy com base em 5 níveis para UVI, 4 níveis para sensibilidade e 4 níveis de nível de sombreamento\n",
         "rule1 = ctrl.Rule(UVI['Baixo'] & (sensibility['Insensível'] | sensibility['Pouco sensível']), ns['Transparente'])\n",
         "rule2 = ctrl.Rule(UVI['Baixo'] & (sensibility['Moderadamente sensível'] | sensibility['Sensível']), ns['Pouco escuro'])\n",
         "rule3 = ctrl.Rule(UVI['Baixo'] & (sensibility['Muito sensível'] | sensibility['Extremamente sensível']), ns['Escuro'])\n",
@@ -160,14 +162,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Criar o sistema de controle fuzzy\n",
+        "# A partir das 16 regras criadas, podemos agora instanciar o sistema de controle fuzzy,\n",
+        "# que será responsável por calcular as decisões baseado nas regras\n",
         "ns_ctrl = ctrl.ControlSystem([rule1, rule2, rule3, rule4, rule5, rule6, rule7, rule8, rule9, rule10, rule11, rule12, rule13, rule14, rule15, rule16])\n",
         "final_ns = ctrl.ControlSystemSimulation(ns_ctrl)"
       ],
       "metadata": {
         "id": "JM4ikqr1Ugej"
       },
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -386,9 +389,9 @@
           "height": 486
         },
         "id": "SEFPkbnBYWX_",
-        "outputId": "a0d9fbec-3ccc-4cd1-d64e-96d1d7b1cfc4"
+        "outputId": "e05cfd8c-fb19-419b-c4c7-407842cde928"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
